# libredirect-instances

./: .editorconfig  .gitignore  blacklist.json  data.json  main.py  networks.json  pyproject.toml
.github/workflows/: main.yml
fixed/: cloudtube.json  mikuInvidious.json  neuters.json  simplyTranslate.json
services/: __init__.py  base.py  from_file.py  medium.py  other.py  pixiv.py  reddit.py  search.py  translate.py  utils.py  wolfram.py  youtube.py
src/: constants.py  main.py
src/services/: base.py  from_file.py  other.py  search.py  utils.py  wolfram.py  youtube.py
